# cli-py

./: .gitignore  README.md  configure.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt
cli_py/: main.py
docs/: api.md  index.md  usage.md
tests/: test_cli.py
